tests/test_files/errors/op_unary2.over
unary: -4
unary2: -"hi"
